[tool.poetry]
name = "cs294-hw1"
version = "0.1.0"
description = ""
authors = ["dvoram <michal.dvorak@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
gym = "~0.10.5"
mujoco-py = "~1.50.1.56"
tensorflow = "^1.14.0"
jupyterlab = "^1.0"
numpy = "^1.17.0"
seaborn = "^0.9.0"
torch = "^1.2.0"
torchvision = "^0.4.0"
tqdm = "^4.33"
pandas = "^0.25.0"
matplotlib = "^3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"