[tool.poetry]
name = "hw2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mujoco-py = "1.50.1.56"
gym = "0.10.5"
tensorflow = "^1.14"
numpy = "^1.17"
seaborn = "^0.9.0"
Box2D = "^2.3"

[tool.poetry.dev-dependencies]
jupyterlab = "^1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
