[tool.poetry]
name = "hw2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mujoco-py = "1.50.1.56"
tensorflow = "1.14.0"
numpy = "1.16.4"
seaborn = "^0.9.0"
gym = "^0.14.0"
tensorflow-probability = "^0.7.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
