[tool.poetry]
name = "hw3"
version = "0.1.0"
description = ""
authors = ["Michal Dvorak <michal.dvorak@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "1.14.0"
numpy = "1.16.4"
seaborn = "^0.9.0"
tensorflow-probability = "^0.7.0"
opencv-python = "^4.1"
jupyterlab = "^1.0"
mujoco-py = "1.50.1.56"
atari-py = "^0.2"
gym = "^0.14.0"
box2d-py = "^2.3"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
